develope left-hero but stay one bug

--- a/index.html
+++ b/index.html
@@ -57,7 +57,24 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <div class="left-hero">
+                <h2>Discover, and collect
+                    <br> extraordinary
+                    <br><span>Monster</span> NFT 's
+                </h2>
+                <p>Marketplace For Monster Charecter collections Non Fungible Token NFTs</p>
+                <div class="expo-create">
+                    <button><i class="fa fa-rocket" aria-hidden="true"></i>
+                        Explore</button>
+                    <button><i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                        Create</button>
+                </div>
+            </div>
+
+        </section>
+    </main>
 </body>
 
 </html>
