Added our service and auctions section + effects

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <title>Axies</title>
     <!-- layout css -->
     <link rel="stylesheet" href="assets/layout.css" />
+    <!-- keyframe style -->
+    <link rel="stylesheet" href="assets/keyframes.css" />
     <!-- style css -->
     <link rel="stylesheet" href="style.css" />
     <!-- font awesome v4 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
+
 </head>
 
 <body>
@@ -58,7 +61,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <section id="hero">
             <div class="left-hero">
                 <h2>Discover, and collect
                     <br> extraordinary
@@ -70,6 +73,163 @@
                         Explore</button>
                     <button><i class="fa fa-newspaper-o" aria-hidden="true"></i>
                         Create</button>
+                </div>
+            </div>
+            <div class="right-hero">
+                <img src="assets/axies-images/02_hero/imgslider2.png" alt="Hero Slider">
+            </div>
+
+        </section>
+        <section id="our-service">
+            <div class="set-up">
+                <i class="fa fa-google-wallet" aria-hidden="true"></i>
+                <h4>Set Up Your Wallet</h4>
+                <p>once you've set up your wallet of choise, connect it to OpenSeaby clicking the NFT MarketPlace the top right corner.</p>
+            </div>
+            <div class="create">
+                <i class="fa fa-address-card" aria-hidden="true"></i>
+                <h4>Create Your Collection</h4>
+                <p>Click Create and set up your collection, Add social links, a description, profile & banner images and set a secondary sales fee.</p>
+            </div>
+            <div class="add-nft">
+                <i class="fa fa-cube" aria-hidden="true"></i>
+                <h4>Add your NFTs</h4>
+                <p>Upload your work (image, video, audio or 3D art) add a title and description and customize your NFTs whit properties stats</p>
+            </div>
+            <div class="list">
+                <i class="fa fa-list" aria-hidden="true"></i>
+                <h4>List Them for Sale</h4>
+                <p>Choose between auctions, fixed-price listings and declining-price listing. You choose how you want to sell your NFTs!</p>
+            </div>
+        </section>
+        <section id="live-action">
+            <div class="live-auction-bar">
+                <div class="live-control">
+                    <h3>Live Auction</h3>
+                    <h5>Explore More</h5>
+                </div>
+                <div class="live-cards">
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="image live auction" />
+                        <div class="timer">
+                            <i class="fa fa-free-code-camp" aria-hidden="true"></i>
+                            <span> 5 : 23 : 23 : 08</span>
+                        </div>
+                        <div class="place-bid">
+                            <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                            <span>Place Bid</span>
+                        </div>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-1.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-heart-o" aria-hidden="true"></i>
+Like                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <div class="timer">
+                            <i class="fa fa-free-code-camp" aria-hidden="true"></i>
+                            <span> 5 : 23 : 23 : 08</span>
+                        </div>
+                        <div class="place-bid">
+                            <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                            <span>Place Bid</span>
+                        </div>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-heart-o" aria-hidden="true"></i>
+Like                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="image live auction" />
+                        <div class="timer">
+                            <i class="fa fa-free-code-camp" aria-hidden="true"></i>
+                            <span> 5 : 23 : 23 : 08</span>
+                        </div>
+                        <div class="place-bid">
+                            <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                            <span>Place Bid</span>
+                        </div>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-3.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-heart-o" aria-hidden="true"></i>
+Like                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="image live auction" />
+                        <div class="timer">
+                            <i class="fa fa-free-code-camp" aria-hidden="true"></i>
+                            <span> 5 : 23 : 23 : 08</span>
+                        </div>
+                        <div class="place-bid">
+                            <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                            <span>Place Bid</span>
+                        </div>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-4.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-heart-o" aria-hidden="true"></i>
+Like                            </button>
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
 
