added popular section + edite body overflow bug

--- a/index.html
+++ b/index.html
@@ -234,6 +234,93 @@ Like                            </button>
             </div>
 
         </section>
+        <section id="popular">
+            <div class="popular-section">
+                <div class="popular-bar">
+                    <h3>Popular Collection</h3>
+                    <h5>Explore More</h5>
+                </div>
+                <div class="popular-cards">
+                    <div class="cards">
+                        <div class="popular-gallery">
+                            <div class="top-images">
+                                <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="popular image collection">
+                            </div>
+                            <div class="bottom-images">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
+                            </div>
+                        </div>
+                        <div class="popular-info">
+                            <img src="assets/axies-images/04_Top Seller/avt-6.jpg">
+                            <i class="fa fa-check-circle" aria-hidden="true"></i>
+
+                            <div class="popular-name">
+                                <h3>Creative Art Collection</h3>
+                                <p>Created By
+                                    <span>Ralph Gattraway</span>
+                                </p>
+                            </div>
+                            <button><i class="fa fa-heart-o" aria-hidden="true"></i> 100</button>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <div class="popular-gallery">
+                            <div class="top-images">
+                                <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="popular image collection">
+                            </div>
+                            <div class="bottom-images">
+                                <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt=" popular image collection ">
+                            </div>
+                        </div>
+                        <div class="popular-info ">
+                            <img src="assets/axies-images/04_Top Seller/avt-7.jpg ">
+                            <i class="fa fa-check-circle " aria-hidden="true "></i>
+
+                            <div class="popular-name ">
+                                <h3>Creative Art Collection</h3>
+                                <p>Created By
+                                    <span>Ralph Gattraway</span>
+                                </p>
+                            </div>
+                            <button><i class="fa fa-heart-o " aria-hidden="true "></i> 100</button>
+                        </div>
+                    </div>
+                    <div class="cards ">
+                        <div class="popular-gallery ">
+                            <div class="top-images ">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg " alt="popular image collection ">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg " alt="popular image collection ">
+                            </div>
+                            <div class="bottom-images ">
+                                <img src="assets/axies-images/03_Live Auctions/card-item8.jpg " alt="popular image collection ">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg " alt="popular image collection ">
+                                <img src="assets/axies-images/03_Live Auctions/card-item8.jpg " alt="popular image collection ">
+                            </div>
+                        </div>
+                        <div class="popular-info ">
+                            <img src="assets/axies-images/04_Top Seller/avt-8.jpg ">
+                            <i class="fa fa-check-circle " aria-hidden="true "></i>
+
+                            <div class="popular-name ">
+                                <h3>Creative Art Collection</h3>
+                                <p>Created By
+                                    <span>Ralph Gattraway</span>
+                                </p>
+                            </div>
+                            <button><i class="fa fa-heart-o " aria-hidden="true "></i> 100</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
     </main>
 </body>
 
