Added today pick

--- a/index.html
+++ b/index.html
@@ -415,6 +415,242 @@ Like                            </button>
                 </div>
             </div>
         </section>
+        <section id="today-pick">
+            <div class="today-pick-bar">
+                <div class="today-pick-header">
+                    <h3>Today's Pick</h3>
+                    <h5>Explore More</h5>
+                </div>
+                <div class="today-pick-filter">
+                    <div class="today-filter">
+                        <button><i class="fa fa-asterisk" aria-hidden="true"></i>
+                            Category
+                        </button>
+                        <button><i class="fa fa-usd" aria-hidden="true"></i>
+                            Price Range
+                        </button>
+                        <button>
+                            <i class="fa fa-bolt" aria-hidden="true"></i>
+                            Sale Type
+                        </button>
+                        <button>
+                            <i class="fa fa-cube" aria-hidden="true"></i>
+                            BlockChain
+                        </button>
+
+                    </div>
+                    <div class="today-sort">
+                        <button>
+                            <i class="fa fa-list" aria-hidden="true"></i>
+                            Sort By: recently Added</button>
+                    </div>
+                </div>
+                <div class="today-pick-card">
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
+                        100</span>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
+
+View History                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
+                        100</span>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
+
+View History                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
+                        100</span>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
+
+View History                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
+                        100</span>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
+
+View History                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
+                        100</span>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
+
+View History                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
+                        100</span>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
+
+View History                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
+                        100</span>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
+
+View History                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
+                        100</span>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
+
+View History                            </button>
+                        </div>
+
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
