--- a/index.html
+++ b/index.html
@@ -472,7 +472,32 @@ View History                            </button>
 
                     </div>
                     <div class="cards">
-                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="image live auction" />
+                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
+                        100</span>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
+
+View History                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
                         <h3>"Hamlet Contemplates Yorick's...</h3>
@@ -522,7 +547,32 @@ View History                            </button>
 
                     </div>
                     <div class="cards">
-                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="image live auction" />
+                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
+                        100</span>
+                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
+
+View History                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
                         <h3>"Hamlet Contemplates Yorick's...</h3>
@@ -572,57 +622,7 @@ View History                            </button>
 
                     </div>
                     <div class="cards">
-                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
-                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
-                        100</span>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
-                        <div class="live-creator">
-                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
-                            <div class="creator-info">
-                                <p>Creator</p>
-                                <h4>SalvadroDalli</h4>
-                            </div>
-                            <button>BSC</button>
-                        </div>
-                        <div class="current-bid">
-                            <div class="bid">
-                                <p>Current Bid
-                                </p>
-                                <h4>4.89 ETH<span> = 12.29$</span></h4>
-                            </div>
-                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
-
-View History                            </button>
-                        </div>
-
-                    </div>
-                    <div class="cards">
-                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
-                        <span><i class="fa fa-heart-o" aria-hidden="true"></i>
-                        100</span>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
-                        <div class="live-creator">
-                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
-                            <div class="creator-info">
-                                <p>Creator</p>
-                                <h4>SalvadroDalli</h4>
-                            </div>
-                            <button>BSC</button>
-                        </div>
-                        <div class="current-bid">
-                            <div class="bid">
-                                <p>Current Bid
-                                </p>
-                                <h4>4.89 ETH<span> = 12.29$</span></h4>
-                            </div>
-                            <button><i class="fa fa-refresh" aria-hidden="true"></i>
-
-View History                            </button>
-                        </div>
-
-                    </div>
-                    <div class="cards">
-                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
                         <h3>"Hamlet Contemplates Yorick's...</h3>
@@ -651,8 +651,68 @@ View History                            </button>
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="footer-container">
+                <div class="about-us-footer">
+                    <img src="assets/img/logo_dark.png" alt="logo">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br/> Illo non eum suscipit earum eos dolore debitis quaerat numquam,</br>
+                        magni id!</p>
+                </div>
+                <div class="my-account-footer">
+                    <h4>My Account</h4>
+                    <ul>
+                        <li>Authors</li>
+                        <li>Collections</li>
+                        <li>Author Profile</li>
+                        <li>Create item</li>
+                    </ul>
+                </div>
+                <div class="resourse-footer">
+                    <h4>Resource</h4>
+                    <ul>
+                        <li>Authors</li>
+                        <li>Collections</li>
+                        <li>Author Profile</li>
+                        <li>Create item</li>
+                    </ul>
+                </div>
+                <div class="company-footer">
+                    <h4>Company</h4>
+                    <ul>
+                        <li>Authors</li>
+                        <li>Collections</li>
+                        <li>Author Profile</li>
+                        <li>Create item</li>
+                    </ul>
+                </div>
+                <div class="suscribe-footer">
+                    <h4>Subscribe US</h4>
+                    <div class="subscribe-input">
+                        <input type="text" placeholder="info@example.com">
+                        <button><i class="fa fa-play" aria-hidden="true"></i>
+                        </button>
+                        <div class="footer-social">
+                            <span><i class="fa fa-telegram" aria-hidden="true"></i>
+                            </span>
+                            <span><i class="fa fa-youtube-play" aria-hidden="true"></i>
+                            </span>
+                            <span><i class="fa fa-audio-description" aria-hidden="true"></i>
+                            </span>
+                            <span><i class="fa fa-plane" aria-hidden="true"></i>
+                            </span>
+                            <span><i class="fa fa-twitter" aria-hidden="true"></i>
+                            </span>
+                            <span><i class="fa fa-facebook" aria-hidden="true"></i>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
 
 </body>
+
+</html>
 
 </html>
