--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="search-wallet">
                     <i class="fa fa-search" aria-hidden="true"></i>
                     <button><i class="fa fa-google-wallet" aria-hidden="true"></i>
-                        Connect Wallet</button>
+                        <a href="login.html">Connect Wallet</a></button>
                 </div>
                 <div class="light-dark">
                     <button><i class="fa fa-sun-o" aria-hidden="true"></i>
@@ -709,6 +709,26 @@ View History                            </button>
                 </div>
             </div>
         </footer>
+        <div class="share-v">
+            <span>
+                <i class="fa fa-telegram" aria-hidden="true"></i>
+            </span>
+            <span>
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+            </span>
+            <span>
+                <i class="fa fa-audio-description" aria-hidden="true"></i>
+            </span>
+            <span>
+                <i class="fa fa-plane" aria-hidden="true"></i>
+            </span>
+            <span>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+            </span>
+            <span>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+            </span>
+        </div>
     </main>
 
 </body>
