added favicon in html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>Axies</title>
     <!-- layout css -->
     <link rel="stylesheet" href="assets/layout.css" />
-    <!-- font awesome v4 -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" -->
-
+    <!-- FavIcon -->
+    <link rel="icon" href="assets/img/favicon-16x16.png" type="image/png" sizes="16x16">
     <!-- keyframe style -->
     <link rel="stylesheet" href="assets/keyframes.css" />
     <!-- hover library -->
