added product summery + end of product demonstrate

--- a/single.html
+++ b/single.html
@@ -118,19 +118,87 @@
                             </div>
                         </div>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam aperiam rerum asperiores quos sapiente iste earum libero molestias architecto, a possimus quasi perferendis nostrum tempora eum culpa eaque amet dolorem.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam aperiam rerum asperiores quos sapiente iste earum libero molestias architecto, a possimus quasi </p>
+                    <div class="product-price">
+                        <div class="product-current-bid">
+                            <h4>Current Bid</h4>
+                            <span><h5>4.89 ETH</h5> = $12.246</span>
+                        </div>
+                        <div class="product-countdown">
+                            <h4>CountDown</h4>
+                            <span> 16 : 17 : 54 </span>
+                        </div>
+                    </div>
+                    <button><i class="fa fa-shopping-bag" aria-hidden="true"></i> Place a Bid</button>
+                    <div class="bid-summery">
+
+                        <h5>
+                            <a href="#" class="active">Bid History</a>
+                        </h5>
+                        <h5>
+                            <a href="">Info</a>
+                        </h5>
+                        <h5>
+                            <a href="#">Provenance</a>
+                        </h5>
+                    </div>
+                    <ul>
+                        <li>
+                            <div class="bid-info-left">
+                                <img src="assets/axies-images/04_Top Seller/avt-1.jpg" alt="product-bidders-person">
+                                <div class="bids-info">
+                                    <h4>Mason WoodWards<span>Place a Bid</span></h4>
+                                    <h6>8 Hours ago</h6>
+                                </div>
+
+                            </div>
+                            <div class="bid-range">
+                                <h4>4.89 ETH</h4>
+                                <h4>= $12.276</h4>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="bid-info-left">
+                                <img src="assets/axies-images/04_Top Seller/avt-3.jpg" alt="product-bidders-person">
+                                <div class="bids-info">
+                                    <h4>Mason WoodWards<span>Bit accepted</span></h4>
+                                    <h6>At 1995/05/15, 12:24 AM</h6>
+                                </div>
+
+                            </div>
+                            <div class="bid-range">
+                                <h4>4.89 ETH</h4>
+                                <h4>= $12.276</h4>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="bid-info-left">
+                                <img src="assets/axies-images/04_Top Seller/avt-4.jpg" alt="product-bidders-person">
+                                <div class="bids-info">
+                                    <h4>Mason WoodWards<span>Place a Bid</span></h4>
+                                    <h6>8 Hours ago</h6>
+                                </div>
+
+                            </div>
+                            <div class="bid-range">
+                                <h4>4.89 ETH</h4>
+                                <h4>= $12.276</h4>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
+            </div>
             </div>
         </section>
     </main>
     <footer>
-        <div class="footer-container">
-            <div class="about-us-footer">
-                <img src="assets/img/logo_dark.png" alt="logo">
+        <div class="footer-container ">
+            <div class="about-us-footer ">
+                <img src="assets/img/logo_dark.png " alt="logo ">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br/> Illo non eum suscipit earum eos dolore debitis quaerat numquam,</br>
                     magni id!</p>
             </div>
-            <div class="my-account-footer">
+            <div class="my-account-footer ">
                 <h4>My Account</h4>
                 <ul>
                     <li>Authors</li>
@@ -139,7 +207,7 @@
                     <li>Create item</li>
                 </ul>
             </div>
-            <div class="resourse-footer">
+            <div class="resourse-footer ">
                 <h4>Resource</h4>
                 <ul>
                     <li>Authors</li>
@@ -148,7 +216,7 @@
                     <li>Create item</li>
                 </ul>
             </div>
-            <div class="company-footer">
+            <div class="company-footer ">
                 <h4>Company</h4>
                 <ul>
                     <li>Authors</li>
@@ -157,24 +225,24 @@
                     <li>Create item</li>
                 </ul>
             </div>
-            <div class="suscribe-footer">
+            <div class="suscribe-footer ">
                 <h4>Subscribe US</h4>
-                <div class="subscribe-input">
-                    <input type="text" placeholder="info@example.com">
-                    <button><i class="fa fa-play" aria-hidden="true"></i>
+                <div class="subscribe-input ">
+                    <input type="text " placeholder="info@example.com ">
+                    <button><i class="fa fa-play " aria-hidden="true "></i>
                     </button>
-                    <div class="footer-social">
-                        <span><i class="fa fa-telegram" aria-hidden="true"></i>
+                    <div class="footer-social ">
+                        <span><i class="fa fa-telegram " aria-hidden="true "></i>
                         </span>
-                        <span><i class="fa fa-youtube-play" aria-hidden="true"></i>
+                        <span><i class="fa fa-youtube-play " aria-hidden="true "></i>
                         </span>
-                        <span><i class="fa fa-audio-description" aria-hidden="true"></i>
+                        <span><i class="fa fa-audio-description " aria-hidden="true "></i>
                         </span>
-                        <span><i class="fa fa-plane" aria-hidden="true"></i>
+                        <span><i class="fa fa-plane " aria-hidden="true "></i>
                         </span>
-                        <span><i class="fa fa-twitter" aria-hidden="true"></i>
+                        <span><i class="fa fa-twitter " aria-hidden="true "></i>
                         </span>
-                        <span><i class="fa fa-facebook" aria-hidden="true"></i>
+                        <span><i class="fa fa-facebook " aria-hidden="true "></i>
                         </span>
                     </div>
                 </div>
